Fix to PrimeNG tooltip styling to stop text-wrapping on timeline

--- a/src/app/components/common-lib/timeline/timeline.component.scss
+++ b/src/app/components/common-lib/timeline/timeline.component.scss
@@ -49,6 +49,11 @@
     height: 40px;
 }
 
+.p-tooltip {
+    max-width: 50%;
+    white-space: nowrap;
+}
+
 @media(max-width: 991px) {
     /* -- ON SCREEN SIZES SMALLER THAN 992 (Bootstrap lg grid column) -- */
     .timeline-container {
